<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proximity</string>
    <string name="action_settings">Settings</string>
    <string name="current">Aktuelle Aktivität</string>
    <string name="header">Bagception</string>
    <string name="current_activity_name">Aktuelle Aktivität</string>
    <string name="title_activity_current_">Current_Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="headText">Menü</string>
    <string name="item">Item hinzufügen</string>
    <string name="place">Ort hinzufügen</string>
    <string name="activity">Aktivität hinzufügen</string>
    <string name="context">Kontext hinzufügen</string>
    <string name="title_activity_add_place">AddPlace</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_add_context">AddContext</string>
    <string name="hello_item">Item</string>
    <string name="hello_place">Place</string>
    <string name="hello_activity">Activity</string>
    <string name="hello_context">Context</string>
    <string name="itemName">Name</string>
    <string name="description">Beschreibung</string>
    <string name="itemVisibility">Sichtbarkeit</string>
    <string name="itemPhoto">Bild</string>
    <string name="itemPlace">Adresse</string>
    <string name="rb1">Privat</string>
    <string name="rb2">Öffentlich</string>
    <string name="addTag">Tag hinzufügen</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="chooseItem">Gegenstände</string>
    <string name="chooseButton">Auswahl</string>
    <string name="football">FUßBALL</string>
    <string name="forgot">Vergessen:</string>
    <string name="additionalFunctions">Weitere Funktionen:</string>
    <string name="changeItem">Gegenstand bearbeiten</string>
    <string name="showItems">Gegenstände</string>

    <string-array name="ids">
        <item>Found ID 1</item>
        <item>Found ID 2</item>
        <item>Found ID XY</item>
    </string-array>
    <string-array name="visibility">
        <item>Öffentlich</item>
        <item>Privat</item>
    </string-array>

    <string name="title_activity_choose_items">ChooseItems</string>
    <string name="title_activity_change_item">ChangeItem</string>
    <string name="title_activity_show_items">ShowItems</string>

</resources>
