<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:useDefaultMargins="true"
    android:background="#3B3B3B" >

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_row="0"
        android:text="@string/item"
        android:textSize="20sp"
        android:textColor="#E2E2E2" />

    <TextView
        android:id="@+id/itemName"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/itemName"
        android:textColor="#E2E2E2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editName"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text"
        android:textColor="#E2E2E2" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="2"
        android:text="@string/description"
        android:textColor="#E2E2E2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:ems="10"
        android:inputType="text"
        android:textColor="#E2E2E2" />

    <TextView
        android:id="@+id/itemVisibility"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="3"
        android:text="@string/itemVisibility"
        android:textColor="#E2E2E2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioButton
        android:id="@+id/rb1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:text="@string/rb1" 
        android:textColor="#E2E2E2" />

    <RadioButton
        android:id="@+id/rb2"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:text="@string/rb2"
        android:textColor="#E2E2E2" />

    <Button
        android:id="@+id/addTag"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/addTag" 
        android:textColor="#E2E2E2" />

    <Spinner
        android:id="@+id/foundTags"
        android:layout_column="1"
        android:layout_row="5"
        android:entries="@array/ids"
        android:textColor="#E2E2E2" />

    <QuickContactBadge
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="6"
        android:textColor="#E2E2E2" />

    <Button
        android:id="@+id/cancel"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/cancel"
        android:textColor="#E2E2E2" />

    <Button
        android:id="@+id/save"
        android:layout_column="1"
        android:layout_row="7"
        android:text="@string/save"
        android:textColor="#E2E2E2" />

</GridLayout>