<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    >
    
<GridLayout 
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:useDefaultMargins="true"
    >

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_row="0"
        android:text="@string/item"
        android:textSize="20sp"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/itemName"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/itemName"
        android:textColor="@color/text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editName"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="2"
        android:text="@string/description"
        android:textColor="@color/text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/itemPlace"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="3"
        android:text="@string/itemPlace"
        android:textColor="@color/text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editAdresse"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/text" />
    
    <TextView 
        android:id="@+id/chooseItems"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_gravity="center_vertical"
        android:text="@string/chooseItem"
        android:textColor="@color/text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button 
        android:id="@+id/chooseButton"
        android:layout_column="1"
        android:layout_row="4"
        android:layout_gravity="center"
        android:text="@string/chooseButton"
        android:onClick="chooseItem"
        android:textColor="@color/text"
        />

    <Button
        android:id="@+id/cancel"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp"
        android:layout_row="8"
        android:layout_marginTop="40dp"
        android:text="@string/cancel"
        android:textColor="@color/text" />

    <Button
        android:id="@+id/save"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="30dp"
        android:layout_row="8"
        android:layout_marginTop="40dp"
        android:text="@string/save"
        android:textColor="@color/text" />

</GridLayout>
</ScrollView>