<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    >
<TableLayout 
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="4dip"
            android:layout_marginTop="10dp"
            android:layout_span="2"
            android:text="@string/item"
            android:textColor="@color/text"
            android:textSize="25sp" />

    </TableRow>
    
    <View
        android:layout_height="1dip"
        android:layout_width="wrap_content"
        android:background="#A2A0A0" />
    
   
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" >
	    
	    <TextView
        android:id="@+id/itemName"
        android:layout_gravity="center"
        android:text="@string/itemName"
        android:layout_marginLeft="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />
	    
	    <EditText
        android:id="@+id/editName"
        android:layout_gravity="center"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:textColor="@color/text" >

        <requestFocus />
    </EditText>
	    
	</TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" >
      
        <TextView
	        android:id="@+id/itemDescription"
	        android:layout_gravity="center"
	        android:layout_marginLeft="15dp"
	        android:text="@string/description"
	        android:textColor="@color/text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
	        android:id="@+id/editDescription"
	        android:layout_gravity="center"
	        android:layout_marginRight="15dp"
	        android:ems="10"
	        android:inputType="text"
	        android:layout_width="wrap_content"
	        android:textColor="@color/text" />
	        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="25dip"
        android:layout_marginTop="10dip" >
      
        <TextView
	        android:id="@+id/itemVisibility"
	        android:layout_gravity="center"
	        android:layout_marginLeft="15dp"
	        android:text="@string/itemVisibility"
	        android:textColor="@color/text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
	        android:id="@+id/visibility"
	        android:entries="@array/visibility"
	        android:layout_height="40dp"
	        android:layout_marginRight="15dp"
	        android:textAlignment="center"
	        android:background="@color/background" />
	        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="25dip"
        android:layout_marginTop="10dip" >
      
        <TextView
	        android:id="@+id/itemPhoto"
	        android:layout_gravity="center"
	        android:layout_marginLeft="15dp"
	        android:text="@string/itemPhoto"
	        android:textColor="@color/text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <QuickContactBadge
            android:id="@+id/badge_small"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fussball" />
	        
    </TableRow> 
    
   
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="15dip"
        android:layout_marginTop="10dip" >
      
        <TextView
	        android:id="@+id/addTag"
	        android:layout_gravity="center"
	        android:layout_marginLeft="15dp"
	        android:text="@string/addTag"
	        android:textColor="@color/text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        
       <Spinner
	        android:id="@+id/foundTags"
	        android:layout_height="40dp"
	        android:textAlignment="center"
	        android:layout_marginRight="15dp"
	        android:background="@color/background"
	        android:entries="@array/ids" />
		        
    </TableRow>
  
    <View
        android:layout_height="1dip"
        android:layout_width="wrap_content"
        android:background="#A2A0A0" />
    
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="15dip" >
    
        
        <Button
		android:id="@+id/cancel"
		android:layout_gravity="center"
		android:textColor="@color/text"
		android:layout_marginLeft="25dp"
		android:onClick="goToMenu"
	    android:text="@string/cancel" />
	
		<Button
	    android:id="@+id/save"
	    android:layout_gravity="center"
	    android:textColor="@color/text"
	    android:text="@string/save" />
		
	</TableRow>
</TableLayout>

    
    


</ScrollView>