<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3B3B3B"
    >
<TableLayout 
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:layout_marginTop="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="4dip"
            android:layout_marginTop="30dp"
            android:layout_span="2"
            android:text="@string/item"
            android:textColor="#E7E4E4"
            android:textSize="25sp" />

        <QuickContactBadge
            android:id="@+id/badge_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/fussball" />
    </TableRow>
    
    <View
        android:layout_height="1dip"
        android:layout_width="wrap_content"
        android:background="#A2A0A0" />
    
   
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" >
	    
	    <TextView
        android:id="@+id/itemName"
        android:layout_gravity="center"
        android:text="@string/itemName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#E2E2E2" />
	    
	    <EditText
        android:id="@+id/editName"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:textColor="#E2E2E2" >

        <requestFocus />
    </EditText>
	    
	</TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" >
      
        <TextView
	        android:id="@+id/itemDescription"
	        android:layout_gravity="center"
	        android:text="@string/description"
	        android:textColor="#E2E2E2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
	        android:id="@+id/editDescription"
	        android:layout_gravity="center"
	        android:ems="10"
	        android:inputType="text"
	        android:layout_width="wrap_content"
	        android:textColor="#E2E2E2" />
	        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="25dip"
        android:layout_marginTop="10dip" >
      
        <TextView
	        android:id="@+id/itemVisibility"
	        android:layout_gravity="center"
	        android:text="@string/itemVisibility"
	        android:textColor="#E2E2E2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
	        android:id="@+id/foundTags"
	        android:layout_gravity="center"
	        android:entries="@array/ids"
	        android:textColor="#E2E2E2" />
	        
    </TableRow>
    
   
    
    <View
        android:layout_height="1dip"
        android:layout_width="wrap_content"
        android:background="#A2A0A0" />
    
    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="15px"
	        
	        android:textSize="30px"
	        android:textColor="#E7E4E4"
	        android:text="Weitere Funktionen:" />
    
    <View
        android:layout_height="1dip"
        android:layout_width="wrap_content"
        android:background="#A2A0A0" />
      
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip" >
      
        	<ImageButton
	        android:id="@+id/imageButton2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="7dip"
	        android:src="@drawable/haltestelle" />
	        
	        <ImageButton
	        android:id="@+id/imageButton3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="7dip"
	        android:src="@drawable/car2go_klein" />
	        
	        <ImageButton
	        android:id="@+id/imageButton4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="7dip"
	        android:src="@drawable/wetter_info" />
	        
    </TableRow>
    
</TableLayout>
</ScrollView>